New pipeline summary image

--- a/PyDataGlobal25.qmd
+++ b/PyDataGlobal25.qmd
@@ -319,7 +319,7 @@ You can also use command-line tool like GDAL to reproject your files.
 ::::
 ## Pipeline summary
 
-![](www/pipeline_workflow.png) 
+![](www/pipeline_summary.png) 
 
 ## Key lessons {.smaller}
 
